update tutorial notebbok

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "<img align=\"left\" src = https://project.lsst.org/sites/default/files/Rubin-O-Logo_0.png width=160 style=\"padding: 20px\">  \n",
     "\n",
-    "## Photo-z Server - Tutorial Notebook\n",
+    "# Photo-z Server - Tutorial Notebook\n",
     "\n",
     "**Contact author**: Julia Gschwend ([julia@linea.org.br](mailto:julia@linea.org.br)) \n",
     "\n",
-    "**Last verified run**: yyyy-mm-dd <br>\n",
+    "**Last verified run**: 2022-10-06 <br>\n",
     "\n"
    ]
   },
@@ -21,14 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction\n",
-    "The Photo-z Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website https://pz-server-dev.linea.org.br/. There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. \n",
-    "<font color=red> to do: update URL when production environment is online </font>\n",
+    "## 0. Introduction\n",
+    "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website https://pz-server.linea.org.br/. There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
     "\n",
-    "The registered data products can also be accessed directly from Python code using the Photo-z Server's data access API, as demonstrated below. For a comprehensive documentation about the Photo-z Server, please visit the [Photo-z Server's documentation page](<add link to readthedocs>).\n",
-    "<font color=red> to do: add link to readthedocs  </font>\n",
+    "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. \n",
     "\n",
-    "The Photo-z Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not connected to RSP. However, it requires RSP credentials for authentication. An overview of this and other contributions related to Photo-zs is available [here](https://linea-it.github.io/pz-lsst-inkind-doc/).  \n"
+    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs.\n"
    ]
   },
   {
@@ -37,7 +35,7 @@
    "source": [
     "### Installation\n",
     "\n",
-    "The Photo-z Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type:  \n",
+    "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type:  \n",
     "\n",
     "<font style=\"background-color:black; color:white;\" face=\"Courier New\"> $ pip install pz-server-lib </font>  \n",
     "\n",
@@ -48,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Imports and Setup"
+    "### Imports and Setup"
    ]
   },
   {
@@ -57,7 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pz_server import PzServer\n",
+    "from pz_server import PzServer, pz_plots\n",
+    "import pandas as pd\n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -66,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The connection with the Photo-z Server from Python code is done by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [Photo-z Server website](https://pz-server-dev.linea.org.br/). \n",
+    "The connection with the PZ Server from Python code is done by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server-dev.linea.org.br/). \n",
     "<font color=red> to do: check link URL </font>"
    ]
   },
@@ -99,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get basic info from PZ Server\n",
+    "### Get basic info from PZ Server\n",
     "\n",
     "The object `pz_server` brings some useful attributes for the user to navigate throug the available contents. For instance:\n",
     "\n",
@@ -135,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display the list of data releases available at the time. "
+    "Display the list of data releases available at the time; "
    ]
   },
   {
@@ -151,7 +150,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The information above can be used to filter the data products of interest for your search. The cells below show examples of usage organized by product types. "
+    "Display all data products available. WARNING: this list can rapdly grow during the survey's operation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pz_server.list_products() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The information about product type, users, and releases shown above can be used to filter the data products of interest for your search. For instance:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.list_products(filters={\"release_name\": \"lsst_dp0\",\n",
+    "                                 \"product_type_name\": \"Training_set\",\n",
+    "                                 \"uploaded_by\": \"gschwend\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "In the cells below, let's see examples of usage organized by product types. "
    ]
   },
   {
@@ -160,8 +200,24 @@
     "tags": []
    },
    "source": [
-    "## Spec-z Catalog \n",
-    "#### List Spec-z Catalogs available on Pz Server"
+    "## 1. Spec-z Catalog \n",
+    "\n",
+    "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources and should be provided as a single file to PZ Server's the upload tool. \n",
+    "\n",
+    "Mandatory columns: \n",
+    "* Right ascension [degrees] - `float`\n",
+    "* Declination [degrees] - `float`\n",
+    "* Spectroscopic or true redshift - `float`\n",
+    "\n",
+    "Recommended columns: \n",
+    "* Spectroscopic redshift error - `float`\n",
+    "* Quality flag - `integer`, `float`, or `string`\n",
+    "* Survey name (recommended for compilations of data from different surveys)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### List Spec-z Catalogs available on PZ Server"
    ]
   },
   {
@@ -170,18 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filter={\"user\":\"Julia\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server.list_products().query(\"product_type == 2\")#,  \n",
-    "                          #       product_type=\"specz_catalog\", \n",
-    "                          #       release=\"all\"})#.to_pandas()"
+    "pz_server.list_products(filters={\"product_type\": \"specz_catalog\"})"
    ]
   },
   {
@@ -192,12 +237,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the website and via API. \n",
+    "\n",
+    "All data products stored on PZ Server are identified by a unique number, the **product ID**. This number is the only information required to access the data or the corresponding metadata.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_specz_catalog = pz_server.get_product_metadata(product_id=\"0001\")\n",
+    "metadata_specz_catalog = pz_server.get_product_metadata(product_id=\"16\")\n",
     "metadata_specz_catalog "
    ]
   },
@@ -205,7 +259,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieve a given Spec-z Catalog (as Astropy table or Pandas DataFrame)"
+    "#### Retrieve a given Spec-z Catalog \n",
+    "\n",
+    "The function `pz_server.get_product()` returns the Spec-z Catalog of interest as an Astropy table. Let's open one as a Pandas DataFrame. "
    ]
   },
   {
@@ -214,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog = pz_server.get_product(product_id=\"0001\", save_file=\"False\").to_pandas()\n",
+    "specz_catalog = pz_server.get_product(product_id=\"16\", save_file=\"False\")#.to_pandas()\n",
     "specz_catalog"
    ]
   },
@@ -231,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe_specz_1.describe()"
+    "specz_catalog.describe()"
    ]
   },
   {
@@ -247,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.specz_plots(data=specz_catalog, metadata=metadata_specz_catalog)"
+    "specz_plots(data=specz_catalog, metadata=metadata_specz_catalog)"
    ]
   },
   {
@@ -255,7 +311,38 @@
    "metadata": {},
    "source": [
     "## Training and Validation Sets \n",
-    "#### List Training and Validation Sets available on Pz Server"
+    "#### List Training and Validation Sets available on Pz Server\n",
+    "\n",
+    "Training and Validation (or Test) Sets are the product of matching (spatially) a given Spec-z Catalog (single survey or compilation) to the photometric data, in this case, the LSST Objects Catalog. In fact, in most cases, the Training and Validation Sets are just the result of splitting the product of matching into two parts. Hence, the Training and Validation Sets are usually found together. In the case of simulations, the Training and Validation Sets can be just a selection from the simulated catalog that contains the true redshifts and the photometric data required to train and validate the photo-z algorithms.\n",
+    "\n",
+    "In the Photo-z Server, there is no dependency between these two products. Users can upload Training and Validation Sets separately, even though they are very similar in format and contents. For each pair of Training and Validation Sets, the user will perform two uploads and, consequently, two new entries will be added to the database. \n",
+    "\n",
+    "_Note 1: There is an ambiguity between the so-called Validation and Test sets found in the literature. In some cases, it is just a matter of terminology, and both play the same role: be used for computing the photo-z metrics as an independent sample from that used for training. In other cases, when the training procedure has a recursive optimization method, the three sets of Training/Validation/Test are distinct, and each one plays a different role. In the context of the PZ Server, there is no distiction between Validation or Test sets. The users are responsible for giving information on how to interpret the subsets on the description field._\n",
+    "\n",
+    "\n",
+    "  \n",
+    "_Note 2: The Training and Validation Sets supported by the PZ Server are only those used by algorithms that work on the catalog level. Training and Validation Sets for image-based methods, such as image-based deep-learning algorithms are not supported._\n",
+    "\n",
+    "\n",
+    "Mandatory column: \n",
+    "* Spectroscopic (or true) redshift - `float`\n",
+    "\n",
+    "Other expected columns\n",
+    "* Object ID from LSST Objects Catalog - `integer`\n",
+    "* Observables: magnitudes (and/or colors, or fluxes) from LSST Objects Catalog - `float`\n",
+    "* Observable errors: magnitude errors (and/or color errors, or flux errors) from LSST Objects Catalog - `float`\n",
+    "* Right ascension [degrees] - `float`\n",
+    "* Declination [degrees] - `float`\n",
+    "* Quality Flag - `integer`, `float`, or `string`\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List Training and Validation Sets available on PZ Server"
    ]
   },
   {
@@ -264,20 +351,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
-    "                                 product_type=\"train_set\", \n",
-    "                                 release=\"all\"}).to_pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
-    "                                 product_type=\"valid_set\", \n",
-    "                                 release=\"all\"}).to_pandas()"
+    "pz_server.list_products(filters={\"user\": \"PZ Coord. Group\",   \n",
+    "                                 \"product_type\": \"train_set\"})#.to_pandas()"
    ]
   },
   {
@@ -293,25 +368,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_train_set = pz_server.get_product_metadata(product_id=\"0004\")\n",
+    "metadata_train_set = pz_server.get_product_metadata(product_id=18)\n",
     "metadata_train_set "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Get metadata of a given Validation Set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata_valid_set = pz_server.get_product_metadata(product_id=\"0005\")\n",
-    "metadata_valid_set "
    ]
   },
   {
@@ -327,8 +385,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = PzServer.get_product(product_id=\"0004\", save_file=\"False\")\n",
-    "valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\")"
+    "train_set = pz_server.get_product(product_id=18, save_file=\"False\")\n",
+    "#valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\")"
    ]
   },
   {
@@ -344,16 +402,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataframe_train_set = pd.DataFrame(train_set)\n",
     "dataframe_train_set.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataframe_valid_set.describe()"
    ]
   },
   {
@@ -369,8 +419,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.train_valid_plots(data=[dataframe_train_set, dataframe_valid_set], \n",
-    "                         metadata=[metadata_train_set, metadata_valid_set])"
+    "train_valid_plots(data=dataframe_train_set, metadata=metadata_train_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_valid_plots(data=[dataframe_train_set, dataframe_valid_set], \n",
+    "                 metadata=[metadata_train_set, metadata_valid_set])"
    ]
   },
   {
@@ -378,7 +437,10 @@
    "metadata": {},
    "source": [
     "## Photo-z Validation Results\n",
-    "#### List Photo-z Validation Results available on Pz Server"
+    "\n",
+    "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar) before uploading it to the Photo-z Server.   \n",
+    "\n",
+    "#### List Validation Results available on PZ Server"
    ]
   },
   {
