--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -166,6 +166,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,9 +185,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"release_name\": \"lsst_dp0\",\n",
-    "                                 \"product_type_name\": \"Training_set\",\n",
-    "                                 \"uploaded_by\": \"gschwend\"})"
+    "pz_server.list_products(filters={\"x\": \"lalala\"})\n",
+    "\n",
+    "\n",
+    "id -> mantém \n",
+    "release_name -> release (exibir o display name do release)\n",
+    "uploaded_by -> mantém\n",
+    "product_type_name -> product_type (exibir o display name do product type)\n",
+    "official_product -> mantém \n",
+    "survey -> mantém \n",
+    "pz_code -> mantém \n",
+    "description -> mantém\n",
+    "created_at -> mantém\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #\"release_name\": \"lsst_dp0\",\n",
+    "    #                             \"product_type_name\": \"Training_set\",\n",
+    "    #                             \"uploaded_by\": \"gschwend\"})"
    ]
   },
   {
@@ -226,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product_type\": \"specz_catalog\"})"
+    "pz_server.list_products(filters={\"product_type\": \"Spec-z Catalog\"})"
    ]
   },
   {
@@ -251,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_specz_catalog = pz_server.get_product_metadata(product_id=\"16\")\n",
+    "metadata_specz_catalog = pz_server.get_product_metadata(\"16\")\n",
     "metadata_specz_catalog "
    ]
   },
@@ -267,11 +294,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "specz_catalog = pz_server.get_product(product_id=\"16\", save_file=\"False\")#.to_pandas()\n",
-    "specz_catalog"
+    "#specz_catalog = pz_server.get_product(22)#, save_file=\"False\")#.to_pandas()\n",
+    "len(specz_catalog[0])"
    ]
   },
   {
