update tutorial: show product metadata as markdown table

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -150,7 +150,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display all data products available. WARNING: this list can rapdly grow during the survey's operation. "
+    "Display all data products available.\n",
+    "\n",
+    "WARNING: this list can rapdly grow during the survey's operation. "
    ]
   },
   {
@@ -166,13 +168,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -185,29 +180,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"x\": \"lalala\"})\n",
-    "\n",
-    "\n",
-    "id -> mantém \n",
-    "release_name -> release (exibir o display name do release)\n",
-    "uploaded_by -> mantém\n",
-    "product_type_name -> product_type (exibir o display name do product type)\n",
-    "official_product -> mantém \n",
-    "survey -> mantém \n",
-    "pz_code -> mantém \n",
-    "description -> mantém\n",
-    "created_at -> mantém\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    #\"release_name\": \"lsst_dp0\",\n",
-    "    #                             \"product_type_name\": \"Training_set\",\n",
-    "    #                             \"uploaded_by\": \"gschwend\"})"
+    "pz_server.list_products(filters={\"release\": \"LSST DP0\",\n",
+    "                                 \"uploaded by\": \"Gschwend\",\n",
+    "                                 \"product type\": \"Training Set\"})"
    ]
   },
   {
@@ -253,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product_type\": \"Spec-z Catalog\"})"
+    "pz_server.list_products(filters={\"product type\": \"Spec-z Catalog\"})"
    ]
   },
   {
@@ -269,7 +244,9 @@
    "source": [
     "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the website and via API. \n",
     "\n",
-    "All data products stored on PZ Server are identified by a unique number, the **product ID**. This number is the only information required to access the data or the corresponding metadata.  "
+    "All data products stored on PZ Server are identified by a unique number, the product **id**. This number is the only information required to access the data or the corresponding metadata. \n",
+    "\n",
+    "The function `pz_server.get_product_metadata(<id>)` returns a dictionary with all the attibutes stored in the PZ Server about a given data product identified by its **id** number. It also displays the values as a markdown table by default (optional). "
    ]
   },
   {
@@ -278,8 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_specz_catalog = pz_server.get_product_metadata(\"16\")\n",
-    "metadata_specz_catalog "
+    "metadata_specz_catalog = pz_server.get_product_metadata(16, show_as_markdown=True) "
    ]
   },
   {
@@ -300,7 +276,7 @@
    },
    "outputs": [],
    "source": [
-    "#specz_catalog = pz_server.get_product(22)#, save_file=\"False\")#.to_pandas()\n",
+    "specz_catalog = pz_server.get_product(22)#, save_file=\"False\")#.to_pandas()\n",
     "len(specz_catalog[0])"
    ]
   },
