remove dependency on markdow, minor improvements in docstrings

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "### Get basic info from PZ Server\n",
     "\n",
-    "The object `pz_server` brings some useful attributes for the user to navigate throug the available contents. For instance:\n",
+    "The object `pz_server` provides useful functions for users to navigate through the available contents. All the functions return tables stored in _[Pandas DataFrames](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)_ for the sake of having an easy-to-read display mode. For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
    ]
@@ -150,9 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display all data products available.\n",
-    "\n",
-    "WARNING: this list can rapdly grow during the survey's operation. "
+    "Display all data products available (WARNING: this list can rapdly grow during the survey's operation). "
    ]
   },
   {
@@ -242,11 +240,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the website and via API. \n",
+    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the website or this way, using the Python API. \n",
     "\n",
     "All data products stored on PZ Server are identified by a unique number, the product **id**. This number is the only information required to access the data or the corresponding metadata. \n",
     "\n",
-    "The function `pz_server.get_product_metadata(<id>)` returns a dictionary with all the attibutes stored in the PZ Server about a given data product identified by its **id** number. It also displays the values as a markdown table by default (optional). "
+    "The function `pz_server.get_product_metadata(<id>)` returns _DataFrame_ with all the attibutes stored in the PZ Server about a given data product identified by its **id** number."
    ]
   },
   {
@@ -255,7 +253,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_specz_catalog = pz_server.get_product_metadata(16, show_as_markdown=True) "
+    "metadata_specz_catalog = pz_server.get_product_metadata(16) \n",
+    "metadata_specz_catalog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(metadata_specz_catalog)"
    ]
   },
   {
@@ -264,7 +272,7 @@
    "source": [
     "#### Retrieve a given Spec-z Catalog \n",
     "\n",
-    "The function `pz_server.get_product()` returns the Spec-z Catalog of interest as an Astropy table. Let's open one as a Pandas DataFrame. "
+    "The function `pz_server.get_product()` returns the Spec-z Catalog of interest as a _Pandas DataFrame_ by default.  "
    ]
   },
   {
@@ -276,9 +284,39 @@
    },
    "outputs": [],
    "source": [
-    "specz_catalog = pz_server.get_product(22)#, save_file=\"False\")#.to_pandas()\n",
-    "len(specz_catalog[0])"
+    "specz_catalog = pz_server.get_product(22)\n",
+    "specz_catalog"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(specz_catalog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
