debug get products

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_product_types()"
+    "pz_server.list_product_types()      "
    ]
   },
   {
@@ -258,15 +258,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(metadata_specz_catalog)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -298,27 +289,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -347,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_plots(data=specz_catalog, metadata=metadata_specz_catalog)"
+    "pz_plots.specz_plots(specz_catalog)"
    ]
   },
   {
@@ -395,8 +365,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"user\": \"PZ Coord. Group\",   \n",
-    "                                 \"product_type\": \"train_set\"})#.to_pandas()"
+    "pz_server.list_products(filters={\"product type\": \"Training Set\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.list_products(filters={\"product type\": \"Validation Set\"})"
    ]
   },
   {
@@ -412,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_train_set = pz_server.get_product_metadata(product_id=18)\n",
+    "metadata_train_set = pz_server.get_product_metadata(22)\n",
     "metadata_train_set "
    ]
   },
@@ -420,16 +398,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieve a given Training (or Validation) Set (as Astropy table or Pandas DataFrame)"
+    "#### Retrieve a given Training Set "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "train_set = pz_server.get_product(product_id=18, save_file=\"False\")\n",
+    "train_set = pz_server.get_product(18)\n",
+    "train_set\n",
     "#valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\")"
    ]
   },
@@ -446,15 +428,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe_train_set = pd.DataFrame(train_set)\n",
-    "dataframe_train_set.describe()"
+    "train_set.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quick visualization of training/validation sets properties"
+    "Quick visualization of training/validation sets properties. The function `train_valid_plots` can receive a single input: "
    ]
   },
   {
@@ -463,7 +444,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_valid_plots(data=dataframe_train_set, metadata=metadata_train_set)"
+    "pz_plots.train_valid_plots(train_set) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or separate training and validation samples for comparison: "
    ]
   },
   {
@@ -472,8 +460,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_valid_plots(data=[dataframe_train_set, dataframe_valid_set], \n",
-    "                 metadata=[metadata_train_set, metadata_valid_set])"
+    "valid_set = pz_server.get_product(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_plots.train_valid_plots(train=train_set, valid=valid_set) "
    ]
   },
   {
@@ -488,16 +484,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# parei aqui!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
-    "                                 product_type=\"pz_result\", \n",
-    "                                 release=\"all\"}).to_pandas()\n",
-    "                        # default: filter=None -> show all products \n",
-    "                        # return dic with product_id an short description provided by the user when uploaded"
+    "pz_server.list_products(filters={\"product type\": \"Validation Results\"})"
    ]
   },
   {
@@ -513,8 +512,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_pz_result = pz_server.get_product_metadata(product_id=\"0006\")\n",
-    "metadata_pz_result  # markdown table"
+    "metadata_valid_results = pz_server.get_product_metadata(99)\n",
+    "metadata_valid_results"
    ]
   },
   {
@@ -523,7 +522,7 @@
    "source": [
     "#### Retrieve a given Photo-z Validation Result: download .tar file\n",
     "\n",
-    "This product type is not necessarily (only) tabular data and can be a list of files, so the function `get_produt` will not return an Astropy table. Instead, it will return the name of the tar file downloaded to the local directory. "
+    "This product type is not necessarily (only) tabular data and can be a list of files, so the function `get_product` will not return an Astropy table. Instead, it will return the name of the tar file downloaded to the local directory. "
    ]
   },
   {
