Update tutorial notebook with plots

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -253,6 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#metadata_specz_catalog = pz_server.get_product_metadata(<product id number>) \n",
     "metadata_specz_catalog = pz_server.get_product_metadata(16) \n",
     "metadata_specz_catalog"
    ]
@@ -275,7 +276,8 @@
    },
    "outputs": [],
    "source": [
-    "specz_catalog = pz_server.get_product(22)\n",
+    "#specz_catalog = pz_server.get_product(<product id number>)\n",
+    "specz_catalog = pz_server.get_product(22, save_file=False)\n",
     "specz_catalog"
    ]
   },
@@ -411,8 +413,7 @@
    "outputs": [],
    "source": [
     "train_set = pz_server.get_product(18)\n",
-    "train_set\n",
-    "#valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\")"
+    "train_set"
    ]
   },
   {
@@ -444,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_plots.train_valid_plots(train_set) "
+    "pz_plots.train_valid_plots(train=train_set) "
    ]
   },
   {
@@ -481,13 +482,6 @@
     "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar) before uploading it to the Photo-z Server.   \n",
     "\n",
     "#### List Validation Results available on PZ Server"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# parei aqui!"
    ]
   },
   {
@@ -541,7 +535,7 @@
    "source": [
     "#### Basic Photo-z Validation Plots\n",
     "\n",
-    "Reuse RAIL evaluation plots and tables for illustration with an example of Photo-z Validation Results. "
+    "If the photo-z results were originated from a run of [RAIL](https://github.com/LSSTDESC/RAIL) Estimation module, we can use directly the plots fuctions from RAIL Evaluation module.\n"
    ]
   },
   {
