add several examples of fitering products list

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -150,6 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "Display all data products available (WARNING: this list can rapdly grow during the survey's operation). "
    ]
   },
@@ -169,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The information about product type, users, and releases shown above can be used to filter the data products of interest for your search. For instance:  "
+    "The information about product type, users, and releases shown above can be used to filter the data products of interest for your search. For that, the function `list_products` receives as argument a dictionary mapping the products attributes to their values. "
    ]
   },
   {
@@ -178,9 +179,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"release\": \"LSST DP0\",\n",
-    "                                 \"uploaded by\": \"Gschwend\",\n",
-    "                                 \"product type\": \"Training Set\"})"
+    "pz_server.list_products(filters={\"release\": \"LSST DP0\", \n",
+    "                                 \"product_type\": \"Spec-z Catalog\",\n",
+    "                                 \"uploaded_by\": \"Gschwend\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It also works if we type a string pattern that is part of the value. For instance, just \"DP0\" instead of \"LSST DP0\": "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.list_products(filters={\"release\": \"DP0\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It also allows the search for multiple strings by adding the suffix `__or` (two underscores + \"or\") to the searh key. For instance, to get training and validation sets in the same search:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.list_products(filters={\"product_type__or\": [\"train\", \"valid\"]})"
    ]
   },
   {
@@ -226,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product type\": \"Spec-z Catalog\"})"
+    "pz_server.list_products(filters={\"product_type\": \"Spec-z Catalog\"})"
    ]
   },
   {
@@ -254,8 +287,16 @@
    "outputs": [],
    "source": [
     "#metadata_specz_catalog = pz_server.get_product_metadata(<product id number>) \n",
-    "metadata_specz_catalog = pz_server.get_product_metadata(16) \n",
-    "metadata_specz_catalog"
+    "metadata_specz_catalog = pz_server.get_product_metadata(6) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(metadata_specz_catalog)"
    ]
   },
   {
@@ -277,17 +318,8 @@
    "outputs": [],
    "source": [
     "#specz_catalog = pz_server.get_product(<product id number>)\n",
-    "specz_catalog = pz_server.get_product(22, save_file=False)\n",
+    "specz_catalog = pz_server.get_product(6, save_file=False)\n",
     "specz_catalog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(specz_catalog)"
    ]
   },
   {
@@ -392,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_train_set = pz_server.get_product_metadata(22)\n",
+    "metadata_train_set = pz_server.get_product_metadata(9)\n",
     "metadata_train_set "
    ]
   },
@@ -412,7 +444,7 @@
    },
    "outputs": [],
    "source": [
-    "train_set = pz_server.get_product(18)\n",
+    "train_set = pz_server.get_product(9)\n",
     "train_set"
    ]
   },
@@ -461,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_set = pz_server.get_product(19)"
+    "valid_set = pz_server.get_product(10)"
    ]
   },
   {
